# cask

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/: cask.h  error.h  helper.h  storage.h
scripts/: format.sh
src/: error.c  helper.c  main.c  record.c  storage.c
tests/: CMakeLists.txt  test_storage.c
